<resources>
    <string name="app_name">Anti-Peeking</string>
    <string name="ap_settings">AP Settings</string>
    <string name="ap_mode">AP Mode</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="insert_your_own_images"><![CDATA[Insert your own images >]]></string>
    <string name="gallery">Gallery</string>
    <string name="my_album">My Album</string>
    <string name="pokemon_go">Pokemon Go</string>
    <string name="dcard">Dcard</string>
    <string name="left_icon">Left Icon</string>
    <string name="right_icon">Right Icon</string>
    <string name="user_selected_image">User Selected Image</string>
    <string name="block_image">Block Image</string>
</resources>