<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/apSettingsText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#211F77"
        android:gravity="center"
        android:text="@string/ap_settings"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/apModeSwitch"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="143dp"
        android:rotationY="-8"
        android:text="@string/ap_mode"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/insertImageButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/insert_your_own_images"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="normal" />

</LinearLayout>